@@ -2,24 +2,27 @@ package com.ids.keycloak.security.authentication;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
 import com.ids.keycloak.security.config.KeycloakSecurityConstants;
 import com.ids.keycloak.security.exception.AuthenticationFailedException;
 import com.ids.keycloak.security.exception.ConfigurationException;
 import com.ids.keycloak.security.exception.RefreshTokenException;
+import com.ids.keycloak.security.exception.TokenExpiredException;
 import com.ids.keycloak.security.model.KeycloakPrincipal;
 import com.ids.keycloak.security.model.PreAuthenticationPrincipal;
+import com.ids.keycloak.security.util.JwtUtil;
+import com.sd.KeycloakClient.dto.KeycloakResponse;
+import com.sd.KeycloakClient.dto.auth.KeycloakIntrospectResponse;
 import com.sd.KeycloakClient.dto.auth.KeycloakTokenInfo;
 import com.sd.KeycloakClient.factory.KeycloakClient;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -27,10 +30,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Answers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
 import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 import org.springframework.security.oauth2.jwt.Jwt;
@@ -54,7 +56,6 @@ class KeycloakAuthenticationProviderTest {
     private ClientRegistrationRepository clientRegistrationRepository;
 
     private static final String CLIENT_ID = "test-client-id";
-    // Using constant from the actual class to ensure matching
     private static final String REGISTRATION_ID = KeycloakSecurityConstants.REGISTRATION_ID;
     private static final String USER_SUB = "user-123";
 
@@ -80,139 +81,128 @@ class KeycloakAuthenticationProviderTest {
                 .build();
     }
 
+    private KeycloakResponse<KeycloakIntrospectResponse> createIntrospectResponse(int status) {
+        return KeycloakResponse.<KeycloakIntrospectResponse>builder()
+                .status(status)
+                .body(new KeycloakIntrospectResponse())
+                .build();
+    }
+
+    private KeycloakResponse<KeycloakTokenInfo> createTokenResponse(int status, KeycloakTokenInfo tokenInfo) {
+        return KeycloakResponse.<KeycloakTokenInfo>builder()
+                .status(status)
+                .body(tokenInfo)
+                .build();
+    }
+
     @Nested
     class 인증_성공_테스트 {
 
         @Test
         void ID_토큰이_유효하면_인증에_성공하고_Principal을_생성한다() {
-            // 1. 준비
-            String idTokenVal = "valid.id.token";
-            String accessTokenVal = "valid.access.token";
-            KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
-            );
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String idTokenVal = "valid.id.token";
+                String accessTokenVal = "valid.access.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
+                );
 
-            // Mocking JWTs
-            Map<String, Object> accessClaims = new HashMap<>();
-            accessClaims.put("sub", USER_SUB);
-            // resource_access: { "test-client-id": { "roles": ["user"] } }
-            accessClaims.put("resource_access", Map.of(CLIENT_ID, Map.of("roles", List.of("user"))));
+                // Mock JwtUtil.isTokenExpired - 만료되지 않음
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(false);
+                jwtUtilMock.when(() -> JwtUtil.extractRoles(any(), anyString()))
+                    .thenReturn(List.of("user"));
 
-            Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
-            Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, accessClaims);
+                // Mocking JWTs
+                Map<String, Object> accessClaims = new HashMap<>();
+                accessClaims.put("sub", USER_SUB);
+                accessClaims.put("resource_access", Map.of(CLIENT_ID, Map.of("roles", List.of("user"))));
 
-            when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
-            when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
+                Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
+                Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, accessClaims);
 
-            // Mocking ClientRegistration
-            when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
-                .thenReturn(createMockClientRegistration(CLIENT_ID));
+                when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
+                when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
 
-            // 5. 실행
-            Authentication result = provider.authenticate(authRequest);
+                // Mock 온라인 검증 - 성공 (200)
+                when(keycloakClient.auth().authenticationByIntrospect(accessTokenVal))
+                    .thenReturn(createIntrospectResponse(200));
 
-            // 6. 검증
-            assertThat(result).isInstanceOf(KeycloakAuthentication.class);
-            assertThat(result.getPrincipal()).isInstanceOf(KeycloakPrincipal.class);
-            
-            KeycloakPrincipal principal = (KeycloakPrincipal) result.getPrincipal();
-            assertThat(principal.getName()).isEqualTo(USER_SUB);
-            assertThat(principal.getAuthorities())
-                .extracting(org.springframework.security.core.GrantedAuthority::getAuthority)
-                .contains("ROLE_user"); 
+                // Mocking ClientRegistration
+                when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
+                    .thenReturn(createMockClientRegistration(CLIENT_ID));
 
-            verify(keycloakClient.auth()).authenticationByIntrospect(idTokenVal);
+                // 2. 실행
+                Authentication result = provider.authenticate(authRequest);
+
+                // 3. 검증
+                assertThat(result).isInstanceOf(KeycloakAuthentication.class);
+                assertThat(result.getPrincipal()).isInstanceOf(KeycloakPrincipal.class);
+
+                KeycloakPrincipal principal = (KeycloakPrincipal) result.getPrincipal();
+                assertThat(principal.getName()).isEqualTo(USER_SUB);
+            }
         }
 
         @Test
-        void ID_토큰이_유효하고_Refresh_Token이_없어도_인증에_성공한다() {
-            // 1. 준비
-            String idTokenVal = "valid.id.token";
-            String accessTokenVal = "valid.access.token";
-            KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
-            );
-            // Refresh Token 미설정 (null)
+        void 토큰_만료시_Refresh_Token으로_재발급_성공하면_인증에_성공한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String oldIdToken = "old.id.token";
+                String oldAccessToken = "old.access.token";
+                String refreshToken = "valid.refresh.token";
 
-            // Mocking JWTs
-            Map<String, Object> accessClaims = new HashMap<>();
-            accessClaims.put("sub", USER_SUB);
-            accessClaims.put("resource_access", Map.of(CLIENT_ID, Map.of("roles", List.of("user"))));
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal(USER_SUB), oldIdToken, oldAccessToken
+                );
+                authRequest.setDetails(refreshToken);
 
-            Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
-            Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, accessClaims);
+                // Mock JwtUtil.isTokenExpired - 만료됨
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(oldIdToken)).thenReturn(true);
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(oldAccessToken)).thenReturn(false);
 
-            when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
-            when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
+                // 새 토큰
+                String newIdTokenVal = "new.id.token";
+                String newAccessTokenVal = "new.access.token";
+                String newRefreshTokenVal = "new.refresh.token";
 
-            // Mocking ClientRegistration
-            when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
-                .thenReturn(createMockClientRegistration(CLIENT_ID));
+                // 새 토큰은 만료되지 않음
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(newIdTokenVal)).thenReturn(false);
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(newAccessTokenVal)).thenReturn(false);
+                jwtUtilMock.when(() -> JwtUtil.extractRoles(any(), anyString()))
+                    .thenReturn(List.of("admin"));
 
-            // 2. 실행
-            Authentication result = provider.authenticate(authRequest);
+                Jwt newIdTokenJwt = createMockJwt(newIdTokenVal, USER_SUB, Collections.emptyMap());
+                Map<String, Object> accessClaims = new HashMap<>();
+                accessClaims.put("sub", USER_SUB);
+                accessClaims.put("resource_access", Map.of(CLIENT_ID, Map.of("roles", List.of("admin"))));
+                Jwt newAccessTokenJwt = createMockJwt(newAccessTokenVal, USER_SUB, accessClaims);
 
-            // 3. 검증
-            assertThat(result.isAuthenticated()).isTrue();
-            verify(keycloakClient.auth()).authenticationByIntrospect(idTokenVal);
-            verify(keycloakClient.auth(), never()).reissueToken(anyString());
-        }
+                when(jwtDecoder.decode(newIdTokenVal)).thenReturn(newIdTokenJwt);
+                when(jwtDecoder.decode(newAccessTokenVal)).thenReturn(newAccessTokenJwt);
 
-        @Test
-        void ID_토큰_검증_실패시_Refresh_Token으로_재발급_성공하면_인증에_성공한다() {
-            // 1. 준비
-            String oldIdToken = "old.id.token";
-            String oldAccessToken = "old.access.token";
-            String refreshToken = "valid.refresh.token";
-            
-            KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                new PreAuthenticationPrincipal(USER_SUB), oldIdToken, oldAccessToken
-            );
-            authRequest.setDetails(refreshToken); // Set refresh token in details
+                // Mock 토큰 재발급
+                KeycloakTokenInfo newTokenInfo = KeycloakTokenInfo.builder()
+                    .idToken(newIdTokenVal)
+                    .accessToken(newAccessTokenVal)
+                    .refreshToken(newRefreshTokenVal)
+                    .build();
 
-            // 2. Mock JwtDecoder: First fail, then success
-            when(jwtDecoder.decode(oldIdToken)).thenThrow(new JwtException("Expired"));
+                when(keycloakClient.auth().reissueToken(refreshToken))
+                    .thenReturn(createTokenResponse(200, newTokenInfo));
 
-            String newIdTokenVal = "new.id.token";
-            String newAccessTokenVal = "new.access.token";
-            String newRefreshTokenVal = "new.refresh.token";
+                // Mock ClientRegistration
+                when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
+                    .thenReturn(createMockClientRegistration(CLIENT_ID));
 
-            Jwt newIdTokenJwt = createMockJwt(newIdTokenVal, USER_SUB, Collections.emptyMap());
-            
-            Map<String, Object> accessClaims = new HashMap<>();
-            accessClaims.put("sub", USER_SUB);
-            accessClaims.put("resource_access", Map.of(CLIENT_ID, Map.of("roles", List.of("admin"))));
-            Jwt newAccessTokenJwt = createMockJwt(newAccessTokenVal, USER_SUB, accessClaims);
+                // 2. 실행
+                Authentication result = provider.authenticate(authRequest);
 
-            when(jwtDecoder.decode(newIdTokenVal)).thenReturn(newIdTokenJwt);
-            when(jwtDecoder.decode(newAccessTokenVal)).thenReturn(newAccessTokenJwt);
-
-            // 3. Mock KeycloakClient: reissue
-            KeycloakTokenInfo newTokenInfo = KeycloakTokenInfo.builder()
-                .idToken(newIdTokenVal)
-                .accessToken(newAccessTokenVal)
-                .refreshToken(newRefreshTokenVal)
-                .build();
-            
-            when(keycloakClient.auth().reissueToken(refreshToken).getBody())
-                .thenReturn(Optional.of(newTokenInfo));
-
-            // Mock ClientRegistration
-            when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID))
-                .thenReturn(createMockClientRegistration(CLIENT_ID));
-
-            // 4. 실행
-            Authentication result = provider.authenticate(authRequest);
-
-            // 5. 검증
-            assertThat(result.getDetails()).isInstanceOf(KeycloakTokenInfo.class);
-            KeycloakTokenInfo resultTokens = (KeycloakTokenInfo) result.getDetails();
-            assertThat(resultTokens.getRefreshToken()).isEqualTo(newRefreshTokenVal);
-
-            KeycloakPrincipal principal = (KeycloakPrincipal) result.getPrincipal();
-            assertThat(principal.getAuthorities())
-                .extracting(org.springframework.security.core.GrantedAuthority::getAuthority)
-                .contains("ROLE_admin");
+                // 3. 검증
+                assertThat(result.getDetails()).isInstanceOf(KeycloakTokenInfo.class);
+                KeycloakTokenInfo resultTokens = (KeycloakTokenInfo) result.getDetails();
+                assertThat(resultTokens.getRefreshToken()).isEqualTo(newRefreshTokenVal);
+            }
         }
     }
 
@@ -220,20 +210,47 @@ class KeycloakAuthenticationProviderTest {
     class 인증_실패_테스트 {
 
         @Test
-        void Refresh_Token이_없는데_ID_토큰도_유효하지_않으면_인증에_실패한다() {
-            // 1. 준비
-            String idToken = "invalid.id.token";
-            KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                new PreAuthenticationPrincipal("anon"), idToken, "access.token"
-            );
-            // No details set (null)
+        void Refresh_Token이_없는데_토큰이_만료되면_RefreshTokenException이_발생한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String idToken = "expired.id.token";
+                String accessToken = "expired.access.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal("anon"), idToken, accessToken
+                );
+                // No details set (null) - Refresh Token 없음
 
-            when(jwtDecoder.decode(idToken)).thenThrow(new JwtException("Invalid token"));
+                // Mock JwtUtil.isTokenExpired - 만료됨
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(idToken)).thenReturn(true);
 
-            // 3. 실행 & 4. 검증
-            assertThatThrownBy(() -> provider.authenticate(authRequest))
-                .isInstanceOf(RefreshTokenException.class)
-                .hasMessageContaining("Refresh Token 정보가 없습니다");
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(RefreshTokenException.class)
+                    .hasMessageContaining("Refresh Token 정보가 없습니다");
+            }
+        }
+
+        @Test
+        void 토큰_서명_검증_실패시_AuthenticationFailedException이_발생한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String idToken = "invalid.signature.token";
+                String accessToken = "access.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal("anon"), idToken, accessToken
+                );
+
+                // Mock JwtUtil.isTokenExpired - 만료되지 않음
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(false);
+
+                // JwtDecoder가 서명 검증 실패
+                when(jwtDecoder.decode(idToken)).thenThrow(new JwtException("Invalid signature"));
+
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(AuthenticationFailedException.class)
+                    .hasMessageContaining("토큰 검증 실패");
+            }
         }
     }
 
@@ -241,44 +258,114 @@ class KeycloakAuthenticationProviderTest {
     class 예외_테스트 {
 
         @Test
-        void Refresh_Token_재발급_요청이_실패하면_AuthenticationFailedException이_발생한다() {
-            // 1. 준비
-            String refreshToken = "invalid.refresh.token";
-            KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                new PreAuthenticationPrincipal("anon"), "expired.token", "access.token"
-            );
-            authRequest.setDetails(refreshToken);
+        void Refresh_Token_재발급_중_통신_오류시_ConfigurationException이_발생한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String refreshToken = "valid.refresh.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal("anon"), "expired.token", "access.token"
+                );
+                authRequest.setDetails(refreshToken);
 
-            when(jwtDecoder.decode(anyString())).thenThrow(new JwtException("Expired"));
-            
-            when(keycloakClient.auth().reissueToken(refreshToken)).thenThrow(new RestClientException("Connection refused"));
+                // Mock JwtUtil.isTokenExpired - 만료됨
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(true);
 
-            // 3. 실행 & 검증
-            assertThatThrownBy(() -> provider.authenticate(authRequest))
-                .isInstanceOf(AuthenticationFailedException.class);
+                // 통신 오류
+                when(keycloakClient.auth().reissueToken(refreshToken))
+                    .thenThrow(new RestClientException("Connection refused"));
+
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(ConfigurationException.class)
+                    .hasMessageContaining("통신할 수 없습니다");
+            }
         }
-        
+
+        @Test
+        void Refresh_Token_재발급_401_응답시_RefreshTokenException이_발생한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String refreshToken = "expired.refresh.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal("anon"), "expired.token", "access.token"
+                );
+                authRequest.setDetails(refreshToken);
+
+                // Mock JwtUtil.isTokenExpired - 만료됨
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(true);
+
+                // 401 응답
+                when(keycloakClient.auth().reissueToken(refreshToken))
+                    .thenReturn(createTokenResponse(401, null));
+
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(RefreshTokenException.class)
+                    .hasMessageContaining("만료되었거나 유효하지 않습니다");
+            }
+        }
+
         @Test
         void ClientRegistration을_찾을_수_없으면_ConfigurationException이_발생한다() {
-             // 1. 준비 (Valid tokens but no client config)
-             String idTokenVal = "valid.id.token";
-             String accessTokenVal = "valid.access.token";
-             KeycloakAuthentication authRequest = new KeycloakAuthentication(
-                 new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
-             );
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String idTokenVal = "valid.id.token";
+                String accessTokenVal = "valid.access.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
+                );
 
-             Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
-             Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, Collections.emptyMap());
+                // Mock JwtUtil.isTokenExpired - 만료되지 않음
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(false);
 
-             when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
-             when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
+                Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
+                Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, Collections.emptyMap());
 
-             // Mock Repo returning null
-             when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID)).thenReturn(null);
+                when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
+                when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
 
-             // 3. 실행 & 검증
-             assertThatThrownBy(() -> provider.authenticate(authRequest))
-                 .isInstanceOf(ConfigurationException.class);
+                // Mock 온라인 검증 - 성공
+                when(keycloakClient.auth().authenticationByIntrospect(accessTokenVal))
+                    .thenReturn(createIntrospectResponse(200));
+
+                // ClientRegistration null 반환
+                when(clientRegistrationRepository.findByRegistrationId(REGISTRATION_ID)).thenReturn(null);
+
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(ConfigurationException.class)
+                    .hasMessageContaining("clientRegistration");
+            }
+        }
+
+        @Test
+        void 온라인_검증_500_응답시_ConfigurationException이_발생한다() {
+            try (MockedStatic<JwtUtil> jwtUtilMock = mockStatic(JwtUtil.class)) {
+                // 1. 준비
+                String idTokenVal = "valid.id.token";
+                String accessTokenVal = "valid.access.token";
+                KeycloakAuthentication authRequest = new KeycloakAuthentication(
+                    new PreAuthenticationPrincipal(USER_SUB), idTokenVal, accessTokenVal
+                );
+
+                // Mock JwtUtil.isTokenExpired - 만료되지 않음
+                jwtUtilMock.when(() -> JwtUtil.isTokenExpired(anyString())).thenReturn(false);
+
+                Jwt idTokenJwt = createMockJwt(idTokenVal, USER_SUB, Collections.emptyMap());
+                Jwt accessTokenJwt = createMockJwt(accessTokenVal, USER_SUB, Collections.emptyMap());
+
+                when(jwtDecoder.decode(idTokenVal)).thenReturn(idTokenJwt);
+                when(jwtDecoder.decode(accessTokenVal)).thenReturn(accessTokenJwt);
+
+                // Mock 온라인 검증 - 서버 오류 (500)
+                when(keycloakClient.auth().authenticationByIntrospect(accessTokenVal))
+                    .thenReturn(createIntrospectResponse(500));
+
+                // 2. 실행 & 검증
+                assertThatThrownBy(() -> provider.authenticate(authRequest))
+                    .isInstanceOf(ConfigurationException.class)
+                    .hasMessageContaining("Keycloak 서버");
+            }
         }
     }
 }
